Enhance README with project details and instructions
Expanded README with detailed project description, features, project structure, technologies used, running instructions, and future improvements.